previous logic moved to rocket-postgres; now using redis

--- a/rocket-postgres/Dockerfile
+++ b/rocket-postgres/Dockerfile
@@ -1,11 +1,12 @@
-FROM rust:latest as builder
+FROM rust:1 as builder
 WORKDIR /app
 COPY . .
 RUN rustup default nightly
+# RUN cargo build --release
 RUN cargo install --path .
 
 FROM debian:buster-slim as runner
-COPY --from=builder /app/target/release/ /usr/local/bin/
+COPY --from=builder /app/target/release ./
 ENV ROCKET_ADDRESS=0.0.0.0
 EXPOSE 8000
-CMD ["rust-web-service"]
+CMD ["/wonkyapi.exe"]
